[gd_scene load_steps=6 format=3 uid="uid://cnpxgr2udl24f"]

[ext_resource type="Script" path="res://scenes/menus/volume_changes.gd" id="1_qb5yh"]
[ext_resource type="Texture2D" uid="uid://cyvckph6hdi3p" path="res://assets/menus/volume_sliders/speaker.png" id="2_0h25t"]
[ext_resource type="Texture2D" uid="uid://dederi6ttrn7g" path="res://assets/menus/volume_sliders/notes.png" id="3_4kohc"]
[ext_resource type="Texture2D" uid="uid://7epor04k8ukt" path="res://assets/menus/volume_sliders/explosion.png" id="4_dfjcp"]
[ext_resource type="PackedScene" uid="uid://cswvdxek4jyvj" path="res://sounds/SoundManager.tscn" id="5_brlhr"]

[node name="VolumeControls" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Master" type="VSlider" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 64.0
offset_right = 144.0
offset_bottom = 128.0
max_value = 1.0
step = 0.05
script = ExtResource("1_qb5yh")

[node name="Music" type="VSlider" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 64.0
offset_right = 168.0
offset_bottom = 128.0
max_value = 1.0
step = 0.05
script = ExtResource("1_qb5yh")
audio_bus_name = "Background-Music"

[node name="Effects" type="VSlider" parent="."]
layout_mode = 0
offset_left = 176.0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 128.0
max_value = 1.0
step = 0.05
script = ExtResource("1_qb5yh")
audio_bus_name = "Effects"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 130.0
offset_right = 143.0
offset_bottom = 145.0
texture = ExtResource("2_0h25t")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 153.0
offset_top = 130.0
offset_right = 168.0
offset_bottom = 145.0
texture = ExtResource("3_4kohc")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 177.0
offset_top = 130.0
offset_right = 192.0
offset_bottom = 145.0
texture = ExtResource("4_dfjcp")
expand_mode = 3
stretch_mode = 4

[node name="SoundManager" parent="." instance=ExtResource("5_brlhr")]

[connection signal="value_changed" from="Master" to="Master" method="_on_value_changed"]
[connection signal="value_changed" from="Music" to="Music" method="_on_value_changed"]
[connection signal="drag_ended" from="Effects" to="Effects" method="_on_drag_ended"]
[connection signal="value_changed" from="Effects" to="Effects" method="_on_value_changed"]
